Added data binding formatting for bound values

--- a/app/src/main/res/layout/activity_currency_detail.xml
+++ b/app/src/main/res/layout/activity_currency_detail.xml
@@ -107,7 +107,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:text="@{currencyState.currentPrice.toString()}"
+                            android:text="@{@string/CurrencyFormatter(currencyState.currentPrice.toString())}"
                             android:textColor="@color/TickerNameColor"
                             android:textSize="16sp"
                             app:layout_constraintBaseline_toBaselineOf="@+id/NumberCoins"
@@ -160,7 +160,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:text="@{currencyState.invested.toString()}"
+                            android:text="@{@string/CurrencyFormatter(currencyState.invested.toString())}"
                             android:textColor="@color/TickerNameColor"
                             android:textSize="16sp"
                             app:layout_constraintBaseline_toBaselineOf="@+id/VaultCurrentPrice"
@@ -173,7 +173,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:text="@{currencyState.sold.toString()}"
+                            android:text="@{@string/CurrencyFormatter(currencyState.sold.toString())}"
                             android:textColor="@color/TickerNameColor"
                             android:textSize="16sp"
                             app:layout_constraintBaseline_toBaselineOf="@+id/VaultAssetsBought"
@@ -186,7 +186,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:text="@{currencyState.net.toString()}"
+                            android:text="@{@string/CurrencyFormatter(currencyState.net.toString())}"
                             android:textColor="@color/TickerNameColor"
                             android:textSize="16sp"
                             app:layout_constraintBaseline_toBaselineOf="@+id/VaultAssetsSold"
@@ -368,7 +368,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="50dp"
-                            android:text="@{currencyState.usd.toString()}"
+                            android:text="@{@string/CurrencyFormatter(currencyState.usd.toString())}"
                             android:textColor="@color/TickerNameColor"
                             android:textSize="18sp"
                             app:layout_constraintEnd_toStartOf="@+id/VaultAddFunds"
@@ -434,7 +434,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:text="@{currencyState.bought.toString()}"
+                            android:text="@{@string/CurrencyFormatter(currencyState.bought.toString())}"
                             android:textColor="@color/TickerNameColor"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toStartOf="@+id/VaultAssetsSold"
